--- a/JordansUrlShortener/wwwroot/index.html
+++ b/JordansUrlShortener/wwwroot/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Jordan's URL Shortener</title>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+    <title>Jordan's URL Shortener</title>    
+    <link rel="stylesheet" type="text/css" href="https://bit.ly/3sPAF07">
 </head>
 
 <body>
